tests/snapshots/test_yarn_skip_build_scripts_from_buildplan.snap
---
source: crates/test_support/src/lib.rs
---
===> ANALYZING
Image with name "<image-name>" not found
===> DETECTING
heroku/nodejs           <buildpack-version>
test/skip-build-scripts 0.0.0
===> RESTORING
<restoring-output>
===> BUILDING

## Heroku Node.js

- Checking Node.js version
  - Node.js version not specified, using `24.x`
  - Resolved Node.js version: `24.21.0`
- Installing Node.js distribution
  - GET https://nodejs.org/download/release/v24.21.0/node-v24.21.0-<arch>.tar.gz ... (<time_elapsed>)
  - Validating ... (<time_elapsed>)
  - Extracting ... (<time_elapsed>)
  - Verifying checksum
  - Extracting Node.js `24.21.0 (<arch>)`
  - Installing Node.js `24.21.0 (<arch>)` ... (<time_elapsed>)
- Determining Yarn information
  - Found `packageManager` set to `yarn@4.2.2` in `package.json`
  - GET https://registry.npmjs.org/@yarnpkg/cli-dist ... (<time_elapsed>)
  - Resolved yarn version `4.2.2` to `4.2.2`
- Installing Yarn
  - GET https://registry.npmjs.org/@yarnpkg/cli-dist/-/cli-dist-4.2.2.tgz ... (<time_elapsed>)
  - Extracting ... (<time_elapsed>)
  - Successfully installed `yarn@4.2.2`
- Setting up yarn dependency cache
  - Running `yarn config set enableGlobalCache false`

      ➤ YN0000: Successfully set enableGlobalCache to false

  - Done (<time_elapsed>)
  - Running `yarn config set cacheFolder /layers/heroku_nodejs/yarn_cache`

      ➤ YN0000: Successfully set cacheFolder to '/layers/heroku_nodejs/yarn_cache'

  - Done (<time_elapsed>)
- Installing dependencies
  - Running `yarn install --immutable --inline-builds`

      ➤ YN0000: · Yarn 4.2.2
      ➤ YN0000: ┌ Resolution step
      ➤ YN0000: └ Completed
      ➤ YN0000: ┌ Fetch step
      ➤ YN0000: └ Completed
      ➤ YN0000: ┌ Link step
      ➤ YN0000: └ Completed
      ➤ YN0000: · Done in <time_elapsed>

  - Done (<time_elapsed>)
- Running scripts
  - Not running `heroku-prebuild` as it was disabled by a participating buildpack
  - Not running `build` as it was disabled by a participating buildpack
  - Not running `heroku-postbuild` as it was disabled by a participating buildpack
- Pruning dev dependencies
  - Skipping as pruning was disabled by a participating buildpack

! Warning: Experimental configuration `node_build_scripts.metadata.skip_pruning` was added to the buildplan by a later buildpack. This feature may change unexpectedly in the future.

- Removing non-deterministic build artifacts before export
  - Nothing to cleanup
- Done (finished in <time_elapsed>)
===> EXPORTING
Adding layer 'heroku/nodejs:available_parallelism'
Adding layer 'heroku/nodejs:dist'
Adding layer 'heroku/nodejs:web_env'
Adding layer 'heroku/nodejs:yarn'
Adding layer 'heroku/nodejs:yarn_cache'
Adding layer 'heroku/nodejs:z_node_module_bins'
Adding layer 'buildpacksio/lifecycle:launch.sbom'
Added 1/1 app layer(s)
Adding layer 'buildpacksio/lifecycle:launcher'
Adding layer 'buildpacksio/lifecycle:config'
Adding label 'io.buildpacks.lifecycle.metadata'
Adding label 'io.buildpacks.build.metadata'
Adding label 'io.buildpacks.project.metadata'
Adding label 'io.buildpacks.exec-env'
no default process type
Saving <image-name>...
*** Images (<random-hex>):
      <image-name>
Adding cache layer 'heroku/nodejs:dist'
Adding cache layer 'heroku/nodejs:yarn'
Adding cache layer 'heroku/nodejs:yarn_cache'
Adding cache layer 'heroku/nodejs:yarnpkg_cli-dist_packument'
Successfully built image '<image-name>'
